2014-04-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an LHAPDF5 compatibility mode flag,
	Pythia6LambdaV5Compat, which sets all LambdaQCD common block
	values to 0.192 as was historically the case for PYTHIA6's use of
	LHAPDF. This behaviour is definitely physically incorrect, as well
	as against the spirit of the PYTHIA6 steering flags, but it is the
	long-term behaviour of PYTHIA6+LHAPDF and many PYTHIA6 MC tunes
	have been built around this behaviour. This flag is set 'true' by
	default to minimise user surprise -- if you want LHAPDF to report
	correct (i.e. varying by PDF) values to PYTHIA6, then explicitly
	set this flag to be false in lhapdf.conf or similar.

2014-04-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a single-string "dir style" SETNAME/NMEM syntax for
	accessing a PDF set+member.

2014-04-14  Andy Buckley  <andy.buckley@cern.ch>

	* Adding the namespace protection workaround for Boost described
	at http://www.boost.org/doc/libs/1_55_0/doc/html/foreach.html

	* Adding AlphaS_FlavorScheme and AlphaS_NumFlavors metadata flags
	as optional specific versions for use by the AlphaS system,
	particularly if the alpha_s QCD evolution doesn't match that of
	the PDF itself.

2014-04-13  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a lhapdf.pc file for use by pkg-config

	* Check for sizes of subgrids required by each interpolator
	algorithm (linear ipol requires >= 2 knots, cubic requires >= 4).

	* Renumberings of several MRST and MSTW sets's global IDs:
	    MRST2004qed_proton 20461->20463
	    MRST2004qed_neutron 20462->20465
	    MSTW2008lo90cl 21041->21050
	    MSTW2008nlo90cl 21141->21150
	    MSTW2008nnlo90cl 21241->21250
	    MSTW2008lo90cl_nf3 23041->23050
	    MSTW2008lo90cl_nf4 23141->23150
	    MSTW2008nlo90cl_nf3 23241->23250
	    MSTW2008nlo90cl_nf4 23341->23350
	    MSTW2008nnlo90cl_nf3 23541->23550
	    MSTW2008nnlo90cl_nf4 23641->23650

	* Updates to the CONFIGFLAGS documention, removing some unused