@@ -16,16 +16,16 @@ if [[ $# -eq 0 || -n $( echo $* | egrep -- "--help|-h" ) ]]; then
     echo
     echo "Usage: lhapdf-config [options]"
     echo "Options:"
-    echo "  --help | -h    : show this help message"
-    echo "  --prefix       : show the installation prefix (cf. autoconf)"
-    echo "  --incdir       : show the path to the LHAPDF C++ header directory"
-    echo "  --libdir       : show the path to the LHAPDF library directory"
-    echo "  --datadir      : show the path to the LHAPDF data directory"
+    echo "  --help | -h   : show this help message"
+    echo "  --prefix      : show the installation prefix (cf. autoconf)"
+    echo "  --incdir      : show the path to the LHAPDF C++ header directory"
+    echo "  --libdir      : show the path to the LHAPDF library directory"
+    echo "  --datadir     : show the path to the LHAPDF data directory"
     echo
-    echo "  --cppflags     : get compiler flags for use with the C preprocessor stage of C++ compilation"
-    echo "  --ldflags      : get compiler flags for use with the linker stage of any compilation"
+    echo "  --cflags      : get compiler flags (aka --cppflags|--cxxflags)"
+    echo "  --libs        : get linker flags (aka --ldflags)"
     echo
-    echo "  --version      : returns LHAPDF release version number"
+    echo "  --version     : return LHAPDF release version number"
 fi
 
 OUT=""
@@ -36,13 +36,13 @@ test -n "$tmp" && OUT="$OUT @prefix@"
 tmp=$( echo "$*" | egrep -- '--\<incdir\>')
 test -n "$tmp" && OUT="$OUT @includedir@"
 
-tmp=$( echo "$*" | egrep -- '--\<cppflags|cxxflags\>')
+tmp=$( echo "$*" | egrep -- '--\<cflags|cppflags|cxxflags\>')
 test -n "$tmp" && OUT="$OUT -I@includedir@ @BOOST_CPPFLAGS@"
 
 tmp=$( echo "$*" | egrep -- '--\<libdir\>')
 test -n "$tmp" && OUT="$OUT @libdir@"
 
-tmp=$( echo "$*" | egrep -- '--\<ldflags\>')
+tmp=$( echo "$*" | egrep -- '--\<libs|ldflags\>')
 test -n "$tmp" && OUT="$OUT -L@libdir@ -lLHAPDF"
 
 tmp=$( echo "$*" | egrep -- '--\<datadir\>|--\<datarootdir\>')
