@@ -1,3 +1,8 @@
+2014-04-17  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Supporting the pkg-config type --cflags and --libs switches on
+	lhapdf-config.
+
 2014-04-16  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding an LHAPDF5 compatibility mode flag,
